tests/test0202.exp
Parse error, unexpected := ( tests/test0202.ctr: 2 )
Invalid left-hand assignment.
