tests/test0202.ctr
#Test invalid left hand assignment with Nil
Nil := True.